gitlab/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - gitlab.doso01.cna.macna.madd-sauer.cloud
    secretName: gitlab-tls
  rules:
  - host: gitlab.doso01.cna.madd-sauer.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-nginx
            port:
              number: 80
